--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h2></h2>
     <img src="image (1).jpeg" alt="Example Image" width="400">
     <a href="file:///C:/Users/user/Documents/6.html">
-        <img src="C:\Users\user\Downloads\icegif-252.gif" alt="Example Image" width="400">
+        <img src="icegif-252.gif" alt="Example Image" width="400">
     </a>
    
     <p>Go to the <a href="file:///C:/Users/user/Documents/6.html" title="This leads you to another page.">other page</a>.</p>
