--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </ol>
     
     <h2></h2>
-    <img src="image (1).jpeg" alt="Example Image" width="400">
+    <img src="image (1).jpeg.jpg" alt="Example Image" width="400">
     <a href="file:///C:/Users/user/Documents/6.html">
         <img src="icegif-252.gif" alt="Example Image" width="400">
     </a>
